--- a/_posts/2024-03-03-CPU设计实践2.md
+++ b/_posts/2024-03-03-CPU设计实践2.md
@@ -204,7 +204,7 @@ static bit_t compute_branch_result(
   int     rv1,
   int     rv2,
   func3_t func3) {
-  switch(func3){
+  switch(func3) {
     case BEQ : return (rv1 == rv2);
     case BNE : return (rv1 != rv2);
     case 2   :
@@ -489,7 +489,7 @@ int main() {
 
   printf("data memory dump (non null words)\n");
 
-  for (int i=0; i<DATA_RAM_SIZE; i++){
+  for (int i=0; i<DATA_RAM_SIZE; i++) {
     w = data_ram[i];
     if (w != 0)
       printf("m[%5x] = %16d (%8x)\n", 4*i, w, (unsigned int)w);
@@ -1207,7 +1207,7 @@ static void set_output_to_d (
   code_address_t    pc,
   instruction_t     instruction,
   decoded_control_t d_ctrl,
-  from_f_to_d_t    *f_to_d){
+  from_f_to_d_t    *f_to_d) {
   f_to_d->pc          = pc;
   f_to_d->instruction = instruction;
   f_to_d->is_branch   = d_ctrl.is_branch;
@@ -1318,7 +1318,7 @@ void decode(
   decoded_instruction_t d_i;
   code_address_t        target_pc;
   if (!i_wait) {
-    if (d_from_f.is_valid){
+    if (d_from_f.is_valid) {
       stage_job(d_from_f.pc, d_from_f.instruction,
                 d_from_f.is_branch, d_from_f.is_jalr,
                 d_from_f.is_jal, &d_i, &target_pc);
@@ -1544,7 +1544,7 @@ void mem_access(
   int           *data_ram,
   from_m_to_w_t *m_to_w) {
   int value;
-  if (m_from_e.is_valid){
+  if (m_from_e.is_valid) {
     value = m_from_e.value;
     stage_job(m_from_e.is_load, m_from_e.is_store,
               m_from_e.address, m_from_e.func3, data_ram, &value);
@@ -1741,10 +1741,10 @@ static void init_file(
   hart_num_t    h;
   reg_num_p1_t  r1;
   reg_num_t     r;
-  for (h1=0; h1<NB_HART; h1++){
+  for (h1=0; h1<NB_HART; h1++) {
 #pragma HLS UNROLL
     h = h1;
-    for (r1=0; r1<NB_REGISTER; r1++){
+    for (r1=0; r1<NB_REGISTER; r1++) {
 #pragma HLS UNROLL
       r = r1;
       is_reg_computed[h][r] = 0;
@@ -1767,7 +1767,7 @@ static void init_exit(
   hart_num_p1_t h1;
   hart_num_t    h;
   bit_t         h_running;
-  for (h1=0; h1<NB_HART; h1++){
+  for (h1=0; h1<NB_HART; h1++) {
 #pragma HLS UNROLL
     h             = h1;
     h_running     = (running_hart_set >> h);
@@ -1808,12 +1808,13 @@ static void lock_unlock_update(
   hart_num_t w_hart,
   reg_num_t  w_destination,
   bit_t      is_reg_computed[][NB_REGISTER]) {
+  // 忽略在issue阶段加锁然后在回写阶段解锁的寄存器
   if (is_lock && !is_unlock)
     is_reg_computed[i_hart][i_destination] = 1;
   else if (is_unlock && !is_lock)
     is_reg_computed[w_hart][w_destination] = 0;
   else if (is_lock && is_unlock && 
-          ((i_hart != w_hart) || (i_destination != w_destination))){
+          ((i_hart != w_hart) || (i_destination != w_destination))) {
     is_reg_computed[i_hart][i_destination] = 1;
     is_reg_computed[w_hart][w_destination] = 0;
   }
@@ -1838,21 +1839,22 @@ void multihart_ip(
   // 每个线程独立的寄存器
   int   reg_file               [NB_HART][NB_REGISTER];
 #pragma HLS ARRAY_PARTITION variable=reg_file        dim=0 complete
-
+  // 记录寄存器是否待回写阶段更新
   bit_t is_reg_computed        [NB_HART][NB_REGISTER];
 #pragma HLS ARRAY_PARTITION variable=is_reg_computed dim=0 complete
 
   from_d_to_f_t f_from_d;
   from_e_to_f_t f_from_e;
-  // 记录hart的state是否有效，有效状态才能被选择
+  // 记录hart是否有待处理的输入
   bit_t         f_state_is_full[NB_HART];
 #pragma HLS ARRAY_PARTITION variable=f_state_is_full dim=1 complete
+  // 存储输入数据等待调度
   f_state_t     f_state        [NB_HART];
 #pragma HLS ARRAY_PARTITION variable=f_state         dim=1 complete
 
   from_f_to_d_t f_to_d;
   from_f_to_d_t d_from_f;
-  // d_state_is_full[hart]会导致f_state[hart]不能被选择
+  // d_state_is_full[hart]会导致hart在取指阶段不能被调度
   bit_t         d_state_is_full[NB_HART];
 #pragma HLS ARRAY_PARTITION variable=d_state_is_full dim=1 complete
   d_state_t     d_state        [NB_HART];
@@ -1903,6 +1905,7 @@ void multihart_ip(
   counter_t     nbc;
 
   init_exit   (running_hart_set, has_exited);
+  // 设置初始待处理的输入即start_pc
   init_f_state(running_hart_set, start_pc, f_state, f_state_is_full);
   init_d_state(d_state_is_full);
   init_i_state(i_state_is_full);
@@ -1955,6 +1958,13 @@ void multihart_ip(
 
 ```
 
+每个阶段的处理流程：  
+1. 选择可调度的hart
+2. 保存有效的输入数据到state待被调度时处理
+3. 判断是否有可调度的hart
+4. 处理可调度的hart: 保存处理结果到state，更新输出数据
+5. 设置输出数据是否有效
+
 ### 取指
 
 ```c
@@ -1970,6 +1980,7 @@ void init_f_state(
   for (h1=0; h1<NB_HART; h1++) {
 #pragma HLS UNROLL
     h                           = h1;
+    // 设置首次取指令的地址并处于可调度状态
     h_running                   = (running_hart_set >> h);
     f_state_is_full[h]          = h_running;
     f_state        [h].fetch_pc = start_pc[h];
@@ -2011,8 +2022,10 @@ void select_hart(
   bit_t      *is_selected,
   hart_num_t *selected_hart) {
   bit_t c[2];
+  // 取指有效译码无效表示流水线可以前进
   c[0] = (f_state_is_full[0] && !d_state_is_full[0]);
   c[1] = (f_state_is_full[1] && !d_state_is_full[1]);
+  // 低位优先级更高
   *selected_hart = (c[0]) ? 0 : 1;
   *is_selected   = (c[0] || c[1]);
 }
@@ -2030,8 +2043,10 @@ void fetch(
   bit_t      is_fetching;
   hart_num_t fetching_hart;
 
+  // 按优先级选择下一个hart
   select_hart(f_state_is_full, d_state_is_full, &is_selected,  &selected_hart);
   
+  // 保存输入数据等待调度
   if (f_from_d.is_valid) {
     f_state_is_full[f_from_d.hart] = 1;
     save_input_from_d(f_from_d, f_state);
@@ -2041,6 +2056,7 @@ void fetch(
     save_input_from_e(f_from_e, f_state);
   }
 
+  // 判断是否有可调度的hart
   is_fetching = is_selected                                           ||
                (f_from_d.is_valid && !d_state_is_full[f_from_d.hart]) ||
                (f_from_e.is_valid && !d_state_is_full[f_from_e.hart]);
@@ -2048,6 +2064,7 @@ void fetch(
                   (f_from_d.is_valid && !d_state_is_full[f_from_d.hart]) ? f_from_d.hart : 
                   f_from_e.hart;
 
+  // 处理被调度的hart
   if (is_fetching) {
     f_state_is_full[fetching_hart] = 0;
     stage_job(fetching_hart, f_state, code_ram);
@@ -2063,7 +2080,119 @@ void fetch(
 
 ```c
 
+void init_d_state(bit_t *d_state_is_full) {
+  hart_num_p1_t h1;
+  hart_num_t    h;
+  for (h1=0; h1<NB_HART; h1++) {
+#pragma HLS UNROLL
+    h                  = h1;
+    d_state_is_full[h] = 0;
+  }
+}
 
+static void decode_instruction(
+  instruction_t          instruction,
+  decoded_instruction_t *d_i) {
+  // ...
+}
+
+static void decode_immediate(
+  instruction_t          instruction,
+  decoded_instruction_t *d_i) {
+  // ...
+}
+
+static void save_input_from_f(
+  from_f_to_d_t d_from_f,
+  d_state_t    *d_state) {
+  hart_num_t            hart;
+  decoded_instruction_t d_i;
+  hart                      = d_from_f.hart;
+  d_state[hart].fetch_pc    = d_from_f.fetch_pc;
+  d_state[hart].instruction = d_from_f.instruction;
+}
+
+static void stage_job(
+  hart_num_t hart,
+  d_state_t *d_state) {
+#pragma HLS INLINE
+  decoded_instruction_t d_i;
+  decode_instruction(d_state[hart].instruction, &d_i);
+  decode_immediate  (d_state[hart].instruction, &d_i);
+  d_state[hart].d_i = d_i;
+  d_state[hart].relative_pc = (d_i.is_jal) ?
+      (code_address_t)(d_state[hart].fetch_pc + (code_address_t)(d_i.imm >> 1)) :
+      (code_address_t)(d_state[hart].fetch_pc + 1);
+}
+
+static void set_output_to_f(
+  hart_num_t     hart,
+  d_state_t     *d_state,
+  from_d_to_f_t *d_to_f) {
+  d_to_f->hart        = hart;
+  d_to_f->relative_pc = d_state[hart].relative_pc;
+}
+
+static void set_output_to_i(
+  hart_num_t     hart,
+  d_state_t     *d_state,
+  from_d_to_i_t *d_to_i) {
+  d_to_i->hart        = hart;
+  d_to_i->fetch_pc    = d_state[hart].fetch_pc;
+  d_to_i->d_i         = d_state[hart].d_i;
+  d_to_i->relative_pc = d_state[hart].relative_pc;
+}
+
+static void select_hart(
+  bit_t      *d_state_is_full,
+  bit_t      *i_state_is_full,
+  bit_t      *is_selected,
+  hart_num_t *selected_hart) {
+  bit_t c[2];
+  // 当前有待处理输入数据且下个阶段没有才能被调度
+  c[0] = (d_state_is_full[0] && !i_state_is_full[0]);
+  c[1] = (d_state_is_full[1] && !i_state_is_full[1]);
+  // 调度优先级
+  *selected_hart = (c[0]) ? 0 : 1;
+  *is_selected   = (c[0] || c[1]);
+}
+
+void decode(
+  from_f_to_d_t  d_from_f,
+  bit_t         *i_state_is_full,
+  d_state_t     *d_state,
+  from_d_to_f_t *d_to_f,
+  from_d_to_i_t *d_to_i,
+  bit_t         *d_state_is_full) {
+  bit_t      is_selected;
+  hart_num_t selected_hart;
+  bit_t      is_decoding;
+  hart_num_t decoding_hart;
+
+  select_hart(d_state_is_full, i_state_is_full, &is_selected, &selected_hart);
+
+  if (d_from_f.is_valid) {
+    d_state_is_full[d_from_f.hart] = 1;
+    save_input_from_f(d_from_f, d_state);
+  }
+
+  is_decoding   = is_selected ||
+                  (d_from_f.is_valid && !i_state_is_full[d_from_f.hart]);
+  decoding_hart = (is_selected) ? selected_hart : d_from_f.hart;
+
+  if (is_decoding) {
+    d_state_is_full[decoding_hart] = 0;
+    stage_job(decoding_hart, d_state);
+    set_output_to_f(decoding_hart, d_state, d_to_f);
+    set_output_to_i(decoding_hart, d_state, d_to_i);
+  }
+
+  // 非分支指令则顺序取指令
+  d_to_f->is_valid = is_decoding                          &&
+                    !d_state[decoding_hart].d_i.is_branch &&
+                    !d_state[decoding_hart].d_i.is_jalr;
+  d_to_i->is_valid = is_decoding;
+}
 
 ```
 
@@ -2071,7 +2200,136 @@ void fetch(
 
 ```c
 
+void init_i_state(bit_t *i_state_is_full) {
+  hart_num_p1_t h1;
+  hart_num_t    h;
+  for (h1=0; h1<NB_HART; h1++) {
+#pragma HLS UNROLL
+    h                  = h1;
+    i_state_is_full[h] = 0;
+  }
+}
 
+static void save_input_from_d(
+  from_d_to_i_t i_from_d,
+  bit_t         is_reg_computed[][NB_REGISTER],
+  i_state_t    *i_state) {
+  hart_num_t hart;
+  bit_t      is_locked_1;
+  bit_t      is_locked_2;
+  hart                      = i_from_d.hart;
+  i_state[hart].fetch_pc    = i_from_d.fetch_pc;
+  i_state[hart].d_i         = i_from_d.d_i;
+  i_state[hart].relative_pc = i_from_d.relative_pc;
+  // 判断ReadAfterWrite依赖
+  is_locked_1 = i_from_d.d_i.is_rs1_reg   &&
+                is_reg_computed[hart][i_from_d.d_i.rs1];
+  is_locked_2 = i_from_d.d_i.is_rs2_reg   &&
+                is_reg_computed[hart][i_from_d.d_i.rs2];
+  i_state[hart].wait_12     = is_locked_1 || is_locked_2;
+}
+
+static void stage_job(
+  hart_num_t hart,
+  i_state_t *i_state,
+  int        reg_file[][NB_REGISTER]) {
+  i_state[hart].rv1 = reg_file[hart][i_state[hart].d_i.rs1];
+  i_state[hart].rv2 = reg_file[hart][i_state[hart].d_i.rs2];
+}
+
+static void set_output_to_e(
+  hart_num_t     hart,
+  i_state_t     *i_state,
+  from_i_to_e_t *i_to_e) {
+  i_to_e->hart        = hart;
+  i_to_e->fetch_pc    = i_state[hart].fetch_pc;
+  i_to_e->d_i         = i_state[hart].d_i;
+  i_to_e->rv1         = i_state[hart].rv1;
+  i_to_e->rv2         = i_state[hart].rv2;
+  i_to_e->relative_pc = i_state[hart].relative_pc;
+}
+
+static void select_hart(
+  i_state_t  *i_state,
+  bit_t      *i_state_is_full,
+  bit_t      *e_state_is_full,
+  bit_t       is_reg_computed[][NB_REGISTER],
+  bit_t      *is_selected,
+  hart_num_t *selected_hart) {
+  bit_t c          [2];
+  bit_t is_locked_1[2];
+  bit_t is_locked_2[2];
+  bit_t wait_12    [2];
+
+  is_locked_1      [0] = i_state        [0].d_i.is_rs1_reg   &&
+                         is_reg_computed[0][i_state[0].d_i.rs1];
+  is_locked_2      [0] = i_state        [0].d_i.is_rs2_reg   &&
+                         is_reg_computed[0][i_state[0].d_i.rs2];
+  wait_12          [0] = is_locked_1[0] || is_locked_2[0];
+
+  // 是否可调度
+  c[0] = (i_state_is_full[0] && !e_state_is_full[0] && !wait_12[0]);
+
+  is_locked_1      [1] = i_state        [1].d_i.is_rs1_reg &&
+                         is_reg_computed[1][i_state[1].d_i.rs1];
+  is_locked_2      [1] = i_state        [1].d_i.is_rs2_reg &&
+                         is_reg_computed[1][i_state[1].d_i.rs2];
+  wait_12          [1] = is_locked_1[1] || is_locked_2[1];
+
+  c[1] = (i_state_is_full[1] && !e_state_is_full[1] && !wait_12[1]);
+
+  // 调度优先级
+  *selected_hart = (c[0]) ? 0 : 1;
+  *is_selected   = (c[0] || c[1]);
+}
+
+void issue(
+  from_d_to_i_t  i_from_d,
+  bit_t         *e_state_is_full,
+  int            reg_file       [][NB_REGISTER],
+  bit_t          is_reg_computed[][NB_REGISTER],
+  i_state_t     *i_state,
+  from_i_to_e_t *i_to_e,
+  bit_t         *i_state_is_full,
+  bit_t         *is_lock,
+  hart_num_t    *i_hart,
+  reg_num_t     *i_destination) {
+  bit_t      is_selected;
+  hart_num_t selected_hart;
+  bit_t      is_issuing;
+  hart_num_t issuing_hart;
+
+  select_hart(i_state, i_state_is_full, e_state_is_full,
+              is_reg_computed, &is_selected, &selected_hart);
+
+  // 保存输入数据
+  if (i_from_d.is_valid) {
+    i_state_is_full[i_from_d.hart] = 1;
+    save_input_from_d(i_from_d, is_reg_computed, i_state);
+  }
+
+  is_issuing   = is_selected ||
+                (i_from_d.is_valid && !e_state_is_full[i_from_d.hart] &&
+                !i_state[i_from_d.hart].wait_12);
+  issuing_hart = (is_selected) ? selected_hart : i_from_d.hart;
+
+  // 是否在回写阶段更新寄存器
+  *is_lock     = is_issuing && !i_state[issuing_hart].d_i.has_no_dest;
+
+  // 待回写阶段更新的寄存器
+  if (!i_state[issuing_hart].d_i.has_no_dest) {
+    *i_hart        = issuing_hart;
+    *i_destination = i_state[issuing_hart].d_i.rd;
+  }
+
+  if (is_issuing) {
+    i_state_is_full[issuing_hart] = 0;
+    stage_job(issuing_hart, i_state, reg_file);
+    set_output_to_e(issuing_hart, i_state, i_to_e);
+  }
+
+  i_to_e->is_valid = is_issuing;
+}
 
 ```
 
@@ -2079,7 +2337,138 @@ void fetch(
 
 ```c
 
+void init_e_state(bit_t *e_state_is_full) {
+  hart_num_p1_t h1;
+  hart_num_t    h;
+  for (h1=0; h1<NB_HART; h1++) {
+#pragma HLS UNROLL
+    h                  = h1;
+    e_state_is_full[h] = 0;
+  }
+}
 
+static void save_input_from_i(
+  from_i_to_e_t e_from_i,
+  e_state_t    *e_state) {
+  hart_num_t hart;
+  hart                      = e_from_i.hart;
+  e_state[hart].rv1         = e_from_i.rv1;
+  e_state[hart].rv2         = e_from_i.rv2;
+  e_state[hart].fetch_pc    = e_from_i.fetch_pc;
+  e_state[hart].d_i         = e_from_i.d_i;
+  e_state[hart].relative_pc = e_from_i.relative_pc;
+}
+
+static void compute(
+  hart_num_t      hart,
+  e_state_t      *e_state,
+  bit_t          *bcond,
+  int            *result1,
+  int            *result2,
+  code_address_t *computed_pc) {
+  // ...
+}
+
+static void stage_job(
+  hart_num_t     hart,
+  e_state_t     *e_state,
+  bit_t          bcond,
+  code_address_t computed_pc) {
+  
+  // 跳转目标
+  e_state[hart].target_pc = ((e_state[hart].d_i.is_branch && bcond) ||
+                              e_state[hart].d_i.is_jalr) ? computed_pc 
+                                                         : e_state[hart].relative_pc;
+  // 是否跳转
+  e_state[hart].is_target = (e_state[hart].d_i.is_branch ||
+                              (e_state[hart].d_i.is_jalr &&
+                                (!e_state[hart].d_i.is_ret || (computed_pc != 0))));
+}
+static void set_output_to_f(
+  hart_num_t     hart,
+  e_state_t     *e_state,
+  from_e_to_f_t *e_to_f) {
+  e_to_f->hart      = hart;
+  e_to_f->target_pc = e_state[hart].target_pc;
+}
+
+static void set_output_to_m(
+  hart_num_t     hart,
+  int            result1,
+  int            result2,
+  code_address_t computed_pc,
+  e_state_t     *e_state,
+  from_e_to_m_t *e_to_m) {
+  e_to_m->hart        = hart;
+  e_to_m->rd          = e_state[hart].d_i.rd;
+  e_to_m->has_no_dest = e_state[hart].d_i.has_no_dest;
+  e_to_m->is_load     = e_state[hart].d_i.is_load;
+  e_to_m->is_store    = e_state[hart].d_i.is_store;
+  e_to_m->func3       = e_state[hart].d_i.func3;
+  // is_ret is used by wb to set is_exited
+  e_to_m->is_ret      = e_state[hart].d_i.is_ret;
+  e_to_m->address     = result2;
+  e_to_m->value       =
+    (e_state[hart].d_i.is_ret) ? (int)computed_pc : 
+    (e_state[hart].d_i.is_jal || e_state[hart].d_i.is_jalr ||
+    (e_state[hart].d_i.type == U_TYPE)) ? result2 : 
+    (e_state[hart].d_i.is_store) ? e_state[hart].rv2 : result1;
+}
+
+static void select_hart(
+  bit_t     *e_state_is_full,
+  bit_t     *m_state_is_full,
+  bit_t     *is_selected,
+  hart_num_t*selected_hart) {
+  bit_t c[2];
+  c[0] =(e_state_is_full[0] && !m_state_is_full[0]);
+  c[1] =(e_state_is_full[1] && !m_state_is_full[1]);
+
+  *selected_hart = (c[0]) ? 0 : 1;
+  *is_selected   = (c[0] || c[1]);
+}
+
+void execute(
+  from_i_to_e_t  e_from_i,
+  bit_t         *m_state_is_full,
+  e_state_t     *e_state,
+  from_e_to_f_t *e_to_f,
+  from_e_to_m_t *e_to_m,
+  bit_t         *e_state_is_full) {
+  bit_t          is_selected;
+  hart_num_t     selected_hart;
+  bit_t          is_executing;
+  hart_num_t     executing_hart;
+  bit_t          bcond;
+  int            result1;
+  int            result2;
+  code_address_t computed_pc;
+
+  select_hart(e_state_is_full, m_state_is_full, &is_selected, &selected_hart);
+
+  if (e_from_i.is_valid) {
+    e_state_is_full[e_from_i.hart] = 1;
+    save_input_from_i(e_from_i, e_state);
+  }
+
+  is_executing   = is_selected ||
+                  (e_from_i.is_valid && !m_state_is_full[e_from_i.hart]);
+  executing_hart = (is_selected) ? selected_hart : e_from_i.hart;
+
+  if (is_executing) {
+    e_state_is_full[executing_hart] = 0;
+    compute  (executing_hart, e_state, &bcond, &result1, &result2, &computed_pc);
+    // 存储执行的结果
+    stage_job(executing_hart, e_state,  bcond, computed_pc);
+
+    set_output_to_f(executing_hart, e_state, e_to_f);
+    set_output_to_m(executing_hart, result1, result2, computed_pc, e_state, e_to_m);
+  }
+  
+  // 分支且跳转
+  e_to_f->is_valid = is_executing && e_state[executing_hart].is_target;
+  e_to_m->is_valid = is_executing;
+}
 
 ```
 
@@ -2087,7 +2476,107 @@ void fetch(
 
 ```c
 
+void init_m_state(bit_t *m_state_is_full) {
+  hart_num_p1_t h1;
+  hart_num_t    h;
+  for (h1=0; h1<NB_HART; h1++) {
+#pragma HLS UNROLL
+    h                  = h1;
+    m_state_is_full[h] = 0;
+  }
+}
 
+static void save_input_from_e(
+  from_e_to_m_t m_from_e,
+  m_state_t    *m_state) {
+  hart_num_t hart;
+  hart                      = m_from_e.hart;
+  m_state[hart].rd          = m_from_e.rd;
+  m_state[hart].has_no_dest = m_from_e.has_no_dest;
+  m_state[hart].is_load     = m_from_e.is_load;
+  m_state[hart].is_store    = m_from_e.is_store;
+  m_state[hart].func3       = m_from_e.func3;
+  m_state[hart].is_ret      = m_from_e.is_ret;
+  m_state[hart].address     = m_from_e.address;
+  m_state[hart].value       = m_from_e.value;
+  m_state[hart].accessed_h  = (m_from_e.address>>(LOG_HART_DATA_RAM_SIZE+2)) + hart;
+  m_state[hart].is_local    = (hart == m_state[hart].accessed_h);
+}
+
+static void stage_job(
+  hart_num_t       hart,
+  bit_t            is_load,
+  bit_t            is_store,
+  b_data_address_t address,
+  func3_t          func3,
+  int              data_ram[][HART_DATA_RAM_SIZE],
+  int             *value) {
+  if (is_load)
+    *value = mem_load(hart, data_ram, address, func3);
+  else if (is_store)
+    mem_store(hart, data_ram, address, *value, (ap_uint<2>)func3);
+}
+
+static void set_output_to_w(
+  hart_num_t     hart,
+  m_state_t     *m_state,
+  from_m_to_w_t *m_to_w) {
+  m_to_w->hart        = hart;
+  m_to_w->rd          = m_state[hart].rd;
+  m_to_w->has_no_dest = m_state[hart].has_no_dest;
+  m_to_w->is_ret      = m_state[hart].is_ret;
+  m_to_w->value       = m_state[hart].value;
+}
+
+static void select_hart(
+  bit_t      *m_state_is_full,
+  bit_t      *w_state_is_full,
+  bit_t      *is_selected,
+  hart_num_t *selected_hart) {
+  bit_t c[2];
+  c[0] = (m_state_is_full[0] && !w_state_is_full[0]);
+  c[1] = (m_state_is_full[1] && !w_state_is_full[1]);
+
+  *selected_hart = (c[0]) ? 0 : 1;
+  *is_selected   = (c[0] || c[1]);
+}
+
+void mem_access(
+  from_e_to_m_t  m_from_e,
+  bit_t         *w_state_is_full,
+  int            data_ram[][HART_DATA_RAM_SIZE],
+  m_state_t     *m_state,
+  from_m_to_w_t *m_to_w,
+  bit_t         *m_state_is_full) {
+  bit_t      is_selected;
+  hart_num_t selected_hart;
+  bit_t      is_accessing;
+  hart_num_t accessing_hart;
+
+  select_hart(m_state_is_full, w_state_is_full, &is_selected, &selected_hart);
+
+  if (m_from_e.is_valid) {
+    m_state_is_full[m_from_e.hart] = 1;
+    save_input_from_e(m_from_e, m_state);
+  }
+
+  is_accessing   = is_selected ||
+                  (m_from_e.is_valid && !w_state_is_full[m_from_e.hart]);
+  accessing_hart = (is_selected) ? selected_hart : m_from_e.hart;
+
+  if (is_accessing) {
+    m_state_is_full[accessing_hart] = 0;
+    stage_job(m_state[accessing_hart].accessed_h,
+              m_state[accessing_hart].is_load,
+              m_state[accessing_hart].is_store,
+              m_state[accessing_hart].address,
+              m_state[accessing_hart].func3, data_ram,
+             &m_state[accessing_hart].value);
+    set_output_to_w(accessing_hart, m_state, m_to_w);
+  }
+
+  m_to_w->is_valid = is_accessing;
+}
 
 ```
 
@@ -2095,7 +2584,93 @@ void fetch(
 
 ```c
 
+void init_w_state(
+  bit_t     *w_state_is_full) {
+  hart_num_p1_t h1;
+  hart_num_t    h;
+  for (h1=0; h1<NB_HART; h1++) {
+#pragma HLS UNROLL
+    h                  = h1;
+    w_state_is_full[h] = 0;
+  }
+}
 
+static void save_input_from_m(
+  from_m_to_w_t w_from_m,
+  w_state_t    *w_state) {
+  hart_num_t hart;
+  hart                      = w_from_m.hart;
+  w_state[hart].rd          = w_from_m.rd;
+  w_state[hart].has_no_dest = w_from_m.has_no_dest;
+  w_state[hart].is_ret      = w_from_m.is_ret;
+  w_state[hart].value       = w_from_m.value;
+}
+
+static void stage_job(
+  hart_num_t hart,
+  w_state_t *w_state,
+  int        reg_file[][NB_REGISTER],
+  bit_t     *has_exited) {
+  if (!w_state[hart].has_no_dest)
+    reg_file[hart][w_state[hart].rd] = w_state[hart].value;
+  // 通过ret退出
+  if (w_state[hart].is_ret && w_state[hart].value == 0)
+    has_exited[hart] = 1;
+}
+
+static void select_hart(
+  bit_t      *w_state_is_full,
+  bit_t      *is_selected,
+  hart_num_t *selected_hart) {
+  bit_t      c[2];
+  c[0] = w_state_is_full[0];
+  c[1] = w_state_is_full[1];
+
+  *selected_hart = (c[0]) ? 0 : 1;
+  *is_selected   = (c[0] || c[1]);
+}
+
+void write_back(
+  from_m_to_w_t w_from_m,
+  int           reg_file[][NB_REGISTER],
+  w_state_t    *w_state,
+  bit_t        *w_state_is_full,
+  bit_t        *is_unlock,
+  hart_num_t   *w_hart,
+  reg_num_t    *w_destination,
+  bit_t        *has_exited) {
+  bit_t      is_selected;
+  hart_num_t selected_hart;
+  bit_t      is_writing;
+  hart_num_t writing_hart;
+
+  // 选择可调度的hart
+  select_hart(w_state_is_full, &is_selected, &selected_hart);
+
+  // 处理并保存输入数据
+  if (w_from_m.is_valid) {
+    w_state_is_full[w_from_m.hart] = 1;
+    save_input_from_m(w_from_m, w_state);
+  }
+
+  // 是否有可调度的hart
+  is_writing   = is_selected || w_from_m.is_valid;
+  writing_hart = (is_selected) ? selected_hart : w_from_m.hart;
+
+  // 标识寄存器已更新完成
+  *is_unlock = is_writing && !w_state[writing_hart].has_no_dest;
+  // 更新完成的寄存器
+  if (!w_state[writing_hart].has_no_dest) {
+    *w_hart        = writing_hart;
+    *w_destination = w_state[writing_hart].rd;
+  }
+
+  // 处理可调度的hart
+  if (is_writing) {
+    w_state_is_full[writing_hart] = 0;
+    stage_job(writing_hart, w_state, reg_file, has_exited);
+  }
+}
 
 ```
 
