--- a/_posts/2024-02-17-chisel入门.md
+++ b/_posts/2024-02-17-chisel入门.md
@@ -150,3 +150,25 @@ ch.valid := true.B
 val b = ch.valid
 ```
 
+### Vec
+
+> A Chisel Vec (a vector) represents a collection of Chisel types of the same type. Each element can be accessed by an index. A Chisel Vec is similar to array data structures in other programming languages.
+
+> A Vec is used for three different purposes: (1) dynamic addressing in hardware, which is a multiplexer; (2) a register file, which includes multiplexing the read and generating the enable signal for the write; (3) parametrization if the number of ports of a Module. For other collections of things, being it hardware elements or other generator data, it is better to use the Scala collection Seq.
+
+Vec表示一组类型相同的元素，常用于寄存器文件、mux等
+
+```scala
+
+// A Vec is created by calling the constructor with two parameters: 
+// the number of elements and the type of the elements. 
+val v = Wire(Vec(3, UInt(4.W)))
+
+// Individual elements are accessed with (index).
+v(0) := 1.U
+v(1) := 3.U
+v(2) := 5.U
+val index = 1.U(2.W)
+val a = v(index)
+
+```
