--- a/_posts/2024-05-24-llvm: ast.md
+++ b/_posts/2024-05-24-llvm: ast.md
@@ -105,14 +105,33 @@ public:
 
     /// ParseTopLevelDecl - Parse one top-level declaration.
     bool ParseTopLevelDecl(DeclGroupPtrTy &Result, ...);
+
+    ExprResult ParseExpression(...);
+    ExprResult ParseCaseExpression(...);
+    ExprResult ParseAssignmentExpression(...);
+    ExprResult ParseUnaryExprOrTypeTraitExpression();
+    ExprResult ParseRHSOfBinaryExpression(ExprResult LHS, ...);
+    ExprResult ParseParenExpression(...);
+
+    StmtResult ParseStatement(...);
+    StmtResult ParseExprStatement(...);
+    StmtResult ParseLabeledStatement(...);
+    StmtResult ParseCaseStatement(...);
+    StmtResult ParseDefaultStatement(...);
+    StmtResult ParseCompoundStatement(...);
+    StmtResult ParseIfStatement(...);
+    StmtResult ParseSwitchStatement(...);
+    StmtResult ParseWhileStatement(...);
+    StmtResult ParseDoStatement();
+    StmtResult ParseForStatement(...);
+    StmtResult ParseGotoStatement();
+    StmtResult ParseContinueStatement();
+    StmtResult ParseBreakStatement();
+    StmtResult ParseReturnStatement();
+    StmtResult ParseAsmStatement(...);
 }
 
-/// Engages in a tight little dance with the lexer to efficiently preprocess tokens.
-/// 管理lexer栈产生有效的token
-///
-/// Lexers know only about tokens within a single source file, and don't
-/// know anything about preprocessor-level issues like the \#include stack, etc.
-/// lexer只能看到某一个源文件，看不到全局
+/// 管理lexer栈产生token，处理各种宏指令
 class Preprocessor {
     // 语言的各种特性开关
     const LangOptions &LangOpts;
@@ -257,6 +276,9 @@ public:
 }
 
 /// Lexer - This provides a simple interface that turns a text buffer into a stream of tokens.
+/// Lexers know only about tokens within a single source file, and don't
+/// know anything about preprocessor-level issues like the \#include stack, etc.
+/// lexer只能看到某一个源文件，看不到全局
 class Lexer : public PreprocessorLexer {
     // Start of the buffer.
     const char *BufferStart;
@@ -313,13 +335,94 @@ public:
 class Sema final {
 public:
     Preprocessor &PP;
+
+    // 用于语义分析的符号表
     ASTContext &Context;
+
+    // AST的使用方
     ASTConsumer &Consumer;
 
     /// CurContext - This is the current declaration context of parsing.
     DeclContext *CurContext;
 
-    
+    void Initialize();
+
+    // 管理作用域
+    void PushFunctionScope();
+    void PushBlockScope(Scope *BlockScope, BlockDecl *Block);
+    void PushCompoundScope(bool IsStmtExpr);
+    void PopCompoundScope();
+    void ActOnPopScope(SourceLocation Loc, Scope *S);
+    void ActOnTranslationUnitScope(Scope *S);
+
+    void PushDeclContext(Scope *S, DeclContext *DC);
+    void PopDeclContext();
+    void EnterDeclaratorContext(Scope *S, DeclContext *DC);
+    void ExitDeclaratorContext(Scope *S);
+
+    // 维护自身状态
+    void ActOnStartOfTranslationUnit();
+    void ActOnEndOfTranslationUnit();
+    void ActOnStartFunctionDeclarationDeclarator(Declarator &D, ...);
+    void ActOnFinishFunctionDeclarationDeclarator(Declarator &D);
+    void ActOnFinishInlineFunctionDef(FunctionDecl *D);
+    void ActOnDefinedDeclarationSpecifier(Decl *D);
+    void ActOnDefs(Scope *S, Decl *TagD, ...);
+    void ActOnEnumBody(...);
+    void ActOnStartOfCompoundStmt(bool IsStmtExpr);
+    void ActOnFinishOfCompoundStmt();
+    void ActOnForEachDeclStmt(DeclGroupPtrTy Decl);
+    void ActOnCaseStmtBody(Stmt *CaseStmt, Stmt *SubStmt);
+
+    // 生成ast
+    Decl *ActOnFinishFunctionBody(Decl *Decl, Stmt *Body);
+    Decl *ActOnFileScopeAsmDecl(Expr *expr, ...);
+    Decl *ActOnTopLevelStmtDecl(Stmt *Statement);
+    Decl *ActOnField(Scope *S, Decl *TagD, ...);
+    Decl *ActOnEnumConstant(Scope *S, Decl *EnumDecl, Decl *LastEnumConstant, ...);
+
+    TypeResult ActOnTypeName(Declarator &D);
+    NamedDecl* ActOnFunctionDeclarator(Scope* S, Declarator& D, ...);
+
+    StmtResult ActOnExprStmt(ExprResult Arg, bool DiscardedValue = true);
+    StmtResult ActOnCompoundStmt(...);
+    StmtResult ActOnDeclStmt(DeclGroupPtrTy Decl, ...);
+    StmtResult ActOnForEachLValueExpr(Expr *E);
+    StmtResult ActOnCaseStmt(ExprResult LHS, ...);
+    StmtResult ActOnDefaultStmt(...);
+    StmtResult ActOnLabelStmt(...);
+    StmtResult ActOnIfStmt(...);
+    StmtResult ActOnStartOfSwitchStmt(...);
+    StmtResult ActOnFinishSwitchStmt(...);
+    StmtResult ActOnWhileStmt(...);
+    StmtResult ActOnDoStmt(...);
+    StmtResult ActOnForStmt(...);
+    StmtResult ActOnGotoStmt(...);
+    StmtResult ActOnIndirectGotoStmt(...);
+    StmtResult ActOnContinueStmt(...);
+    StmtResult ActOnBreakStmt(...);
+    StmtResult ActOnReturnStmt(...);
+    StmtResult ActOnGCCAsmStmt(...);
+
+    ExprResult ActOnPredefinedExpr(...);
+    ExprResult ActOnIntegerConstant(...);
+    ExprResult ActOnNumericConstant(...);
+    ExprResult ActOnCharacterConstant(...);
+    ExprResult ActOnParenExpr(...);
+    ExprResult ActOnParenListExpr(...);
+    ExprResult ActOnStringLiteral(...);
+    ExprResult ActOnUnaryOp(...);
+    ExprResult ActOnUnaryExprOrTypeTraitExpr(...);
+    ExprResult ActOnPostfixUnaryOp(...);
+    ExprResult ActOnArraySubscriptExpr(...);
+    ExprResult ActOnMemberAccessExpr(...);
+    ExprResult ActOnCallExpr(...);
+    ExprResult ActOnCastExpr(...);
+    ExprResult ActOnCaseExpr(..., ExprResult Val);
+    ExprResult ActOnBinOp(...);
+    ExprResult ActOnConditionalOp(...);
+    ExprResult ActOnStmtExpr(...);
+    ExprResult ActOnStmtExprResult(...);
 }
 
 ```
@@ -332,6 +435,7 @@ public:
 
 
 ## 词法分析
+
 
 
 
