--- a/_posts/2024-01-06-计划写一本书-晶体管以上.md
+++ b/_posts/2024-01-06-计划写一本书-晶体管以上.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "计划写一本书-晶体管的春天"
+title:  "计划写一本书-晶体管以上"
 date:   2024-01-06 16:00:00 +0000
 categories: jekyll
 tags: index
@@ -59,7 +59,7 @@ tags: index
 
 > 书中从最基础的逻辑门开始，开发了一款16bit的cpu，开发了一款全新的汇编语言，在此基础上开发了一个简易的操作系统，一个类似jvm的虚拟机以及一门类似java的编程语言。然后用类java语言开发了一个俄罗斯方块，所以整个项目旅程被命名为`Nand to Tetris`。
 
-> 我的规划是走一样的路，但是使用成熟的开源项目，裁剪之后得到一个独立的`可执行`程序。从晶体管和逻辑门开始，到一个包含cpu的soc，到kernel和jvm，最终到java web框架spring系列，突然灵光一闪，书名可以暂时叫`晶体管的spring`
+> 我的规划是走一样的路，但是使用成熟的开源项目，裁剪之后得到一个独立的`可执行`程序。从晶体管和逻辑门开始，到一个包含cpu的soc，到kernel和jvm，最终到java web框架spring系列
 
 ## 逻辑门
 
